<?xml version="1.0"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.etourdot</groupId>
    <artifactId>vertx-mod-xml</artifactId>
    <version>0.1.2</version>
    <packaging>jar</packaging>
    <name>xml-mod</name>

    <description>
        XML Module for easy xml manipulation with vert.x
    </description>

    <parent>
        <groupId>org.sonatype.oss</groupId>
        <artifactId>oss-parent</artifactId>
        <version>7</version>
    </parent>

    <developers>
        <developer>
            <name>Emmanuel Tourdot</name>
            <email>emmanuel.tourdot@gmail.com</email>
            <organizationUrl>http://etourdot.org</organizationUrl>
        </developer>
    </developers>

    <licenses>
        <license>
            <name>The Apache Software License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <properties>
        <module.name>${project.groupId}~${project.artifactId}~${project.version}</module.name>
        <!-- encodings -->
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

        <!-- plugin versions -->
        <maven.compiler.plugin.version>3.0</maven.compiler.plugin.version>
        <maven.failsafe.plugin.version>2.14</maven.failsafe.plugin.version>
        <maven.surefire.plugin.version>2.14</maven.surefire.plugin.version>
        <maven.resources.plugin.version>2.6</maven.resources.plugin.version>
        <maven.dependency.plugin.version>2.7</maven.dependency.plugin.version>
        <maven.assembly.plugin.version>2.4</maven.assembly.plugin.version>
        <maven.enforcer.plugin.version>1.1</maven.enforcer.plugin.version>
        <maven.clean.plugin.version>2.5</maven.clean.plugin.version>
        <maven.source.plugin.version>2.2.1</maven.source.plugin.version>
        <maven.jgitflow.plugin.version>1.0-m4.3</maven.jgitflow.plugin.version>
        <!-- dependency versions -->
        <version.junit>4.11</version.junit>
        <version.vertx>2.1</version.vertx>
        <version.testtools>2.0.3-final</version.testtools>
        <version.saxonHE>9.5.1-6</version.saxonHE>
    </properties>

    <repositories>
        <repository>
            <id>maven-snapshot</id>
            <name>Sonatype snapshot builds</name>
            <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
            <layout>default</layout>
            <releases>
                <enabled>false</enabled>
            </releases>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
    </repositories>

    <dependencies>
        <!-- saxon dependency -->
        <dependency>
            <groupId>net.sf.saxon</groupId>
            <artifactId>Saxon-HE</artifactId>
            <version>${version.saxonHE}</version>
        </dependency>
        <!--dependency>
            <groupId>xerces</groupId>
            <artifactId>xercesImpl</artifactId>
            <version>2.11.0</version>
        </dependency-->

        <!-- vert.x dependencies -->
        <dependency>
            <groupId>io.vertx</groupId>
            <artifactId>vertx-core</artifactId>
            <version>${version.vertx}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>io.vertx</groupId>
            <artifactId>vertx-platform</artifactId>
            <version>${version.vertx}</version>
            <scope>provided</scope>
        </dependency>
        <!-- other dependencies -->
        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
            <version>18.0</version>
        </dependency>
        <!-- test dependencies -->
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>${version.junit}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>io.vertx</groupId>
            <artifactId>testtools</artifactId>
            <version>${version.testtools}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.maven.ide.eclipse</groupId>
                    <artifactId>lifecycle-mapping</artifactId>
                    <version>1.0.0</version>
                    <configuration>
                        <lifecycleMappingMetadata>
                            <pluginExecutions>
                                <pluginExecution>
                                    <pluginExecutionFilter>
                                        <artifactId>maven-resources-plugin</artifactId>
                                        <versionRange>[2.4,)</versionRange>
                                        <phase>process-resources</phase>
                                        <goals>
                                            <goal>resources</goal>
                                        </goals>
                                    </pluginExecutionFilter>
                                    <action>
                                        <ignore />
                                    </action>
                                </pluginExecution>
                                <pluginExecution>
                                    <pluginExecutionFilter>
                                        <artifactId>maven-resources-plugin</artifactId>
                                        <versionRange>[2.4,)</versionRange>
                                        <phase>process-test-classes</phase>
                                        <goals>
                                            <goal>copy-resources</goal>
                                        </goals>
                                    </pluginExecutionFilter>
                                    <action>
                                        <ignore />
                                    </action>
                                </pluginExecution>
                            </pluginExecutions>
                        </lifecycleMappingMetadata>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
        <extensions>
            <extension>
                <groupId>org.apache.maven.wagon</groupId>
                <artifactId>wagon-webdav-jackrabbit</artifactId>
                <version>2.4</version>
            </extension>
        </extensions>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven.compiler.plugin.version}</version>
                <configuration>
                    <source>1.7</source>
                    <target>1.7</target>
                    <encoding>${project.build.sourceEncoding}</encoding>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>2.1.2</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>jar-no-fork</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <version>${maven.resources.plugin.version}</version>
                <configuration>
                    <encoding>${project.build.sourceEncoding}</encoding>
                </configuration>
                <executions>
                    <execution>
                        <id>copy-resources</id>
                        <phase>process-classes</phase>
                        <goals>
                            <goal>copy-resources</goal>
                        </goals>
                        <configuration>
                            <overwrite>true</overwrite>
                            <outputDirectory>target/mods/${module.name}</outputDirectory>
                            <resources>
                                <resource>
                                    <directory>target/classes</directory>
                                    <filtering>false</filtering>
                                </resource>
                            </resources>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <version>${maven.dependency.plugin.version}</version>
                <executions>
                    <execution>
                        <id>copy-mod-dependencies-to-target</id>
                        <phase>process-classes</phase>
                        <goals>
                            <goal>copy-dependencies</goal>
                        </goals>
                        <configuration>
                            <outputDirectory>target/mods/${module.name}/lib</outputDirectory>
                            <includeScope>runtime</includeScope>
                        </configuration>
                    </execution>
                </executions>
            </plugin>


            <plugin>
                <artifactId>maven-clean-plugin</artifactId>
                <version>${maven.clean.plugin.version}</version>
                <configuration>
                    <filesets>
                        <fileset>
                            <directory>target/mods</directory>
                        </fileset>
                    </filesets>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven.surefire.plugin.version}</version>
                <configuration>
                    <disableXmlReport>true</disableXmlReport>
                    <argLine>-Xss2048k</argLine>
                    <verbose>true</verbose>
                    <forkCount>0</forkCount>
                    <!--includes>
                      <include>**unit/*Test*.java</include>
                    </includes-->
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-failsafe-plugin</artifactId>
                <version>${maven.failsafe.plugin.version}</version>
                <configuration>
                    <systemPropertyVariables>
                        <property>
                            <vertx.mods>target/mods</vertx.mods>
                            <vertx.test.timeout>15</vertx.test.timeout>
                        </property>
                    </systemPropertyVariables>
                    <argLine>-Xss2048k -XX:MaxPermSize=128m</argLine>
                    <verbose>true</verbose>
                    <includes>
                        <include>**/integration/**</include>
                    </includes>
                    <useSystemClassloader>false</useSystemClassloader>
                </configuration>
            </plugin>

            <plugin>
                <groupId>external.atlassian.jgitflow</groupId>
                <artifactId>jgitflow-maven-plugin</artifactId>
                <version>${maven.jgitflow.plugin.version}</version>
            </plugin>
        </plugins>
    </build>

    <distributionManagement>
        <repository>
            <id>bintray-etourdot-vertx-mods-vertx-mod-xml</id>
            <name>etourdot-vertx-mods-vertx-mod-xml</name>
            <url>https://api.bintray.com/maven/etourdot/vertx-mods/vertx-mod-xml</url>
        </repository>
    </distributionManagement>

    <scm>
        <connection>scm:git:https://github.com/etourdot/${project.artifactId}.git</connection>
        <developerConnection>scm:git:ssh://git@github.com/etourdot/${project.artifactId}.git</developerConnection>
        <url>https://github.com/etourdot/${project.artifactId}</url>
        <tag>HEAD</tag>
    </scm>
</project>
